feat (User Services): added making a request for a service API
implemented the underlying design pattern to support different type of services.
added the Entry Point of all services that may be implemented in future. it is the store api of servicesController.
added a middleware in order to validate authenticated user type.
