# storage/api-docs/api-docs-peyvandtel.json
@@ -1286,5 +1286,59 @@
                 "in": "header"
             }
         }
-    }
+    },
+    "tags": [
+        {
+            "name": "Authentication",
+            "description": "Authentication"
+        },
+        {
+            "name": "Service Prices",
+            "description": "Service Prices"
+        },
+        {
+            "name": "Service Prices",
+            "description": "Service Prices"
+        },
+        {
+            "name": "Service Prices",
+            "description": "Service Prices"
+        },
+        {
+            "name": "Service Prices",
+            "description": "Service Prices"
+        },
+        {
+            "name": "Services",
+            "description": "Services"
+        },
+        {
+            "name": "Services",
+            "description": "Services"
+        },
+        {
+            "name": "Services",
+            "description": "Services"
+        },
+        {
+            "name": "Services",
+            "description": "Services"
+        },
+        {
+            "name": "Users",
+            "description": "Users"
+        },
+        {
+            "name": "Users",
+            "description": "Users"
+        },
+        {
+            "name": "Users",
+            "description": "Users"
+        },
+        {
+            "name": "Users",
+            "description": "Users"
+        }
+    ]
 }
